fix text overflow

--- a/src/app/SharedComponentModules/PrimaryContentDisplayer/GridBlowUp/grid/grid.component.css
+++ b/src/app/SharedComponentModules/PrimaryContentDisplayer/GridBlowUp/grid/grid.component.css
@@ -9,7 +9,7 @@ a.item {
     display: inline-block;
     flex-flow: column;
     min-width: 0px;
-    height: 260px;
+    height: 270px;
     overflow: hidden;
 }
 
@@ -45,5 +45,4 @@ div.thumbtext {
     font-size: 16px;
     font-weight: bold;
     white-space: wrap;
-    overflow: visible;
 }
